feat: Return all API datetimes expresed in UTC
